--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <ul id="urlList">
             <li><a href="https://pmav99.github.io/static/CFL-schism.html">CFL-schism.html</a></li>
             <li><a href="https://pmav99.github.io/static/ERA5-meluxina.html">ERA5-meluxina.html</a></li>
+            <li><a href="https://pmav99.github.io/static/stofs2d_stations.html">stofs2d_stations.html</a></li>
         </ul>
     </div>
 
