--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
             <li><a href="https://pmav99.github.io/static/CFL-schism.html">CFL-schism.html</a></li>
             <li><a href="https://pmav99.github.io/static/ConcaveHull_OSM.html">ConcaveHull_OSM.html</a></li>
             <li><a href="https://pmav99.github.io/static/ERA5-meluxina.html">ERA5-meluxina.html</a></li>
+            <li><a href="https://pmav99.github.io/static/OSM_simplified_500-mesh-Aegean.html">OSM_simplified_500-mesh-Aegean.html</a></li>
             <li><a href="https://pmav99.github.io/static/OSM_simplified_500.html">OSM_simplified_500.html</a></li>
             <li><a href="https://pmav99.github.io/static/osm_crete_100m_buffer.html">osm_crete_100m_buffer.html</a></li>
             <li><a href="https://pmav99.github.io/static/osm_med_concave_g100m.html">osm_med_concave_g100m.html</a></li>
